Removed payment logic. Updated JSON

--- a/account.html
+++ b/account.html
@@ -3,182 +3,86 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Create Account - The Enchanted Checklist</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Account Management</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Poppins', -apple-system, BlinkMacSystemFont, sans-serif;
-      color: white;
+      font-family: 'Poppins', sans-serif;
       background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
-      background-attachment: fixed;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+      margin: 0;
+      color: white;
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 2rem 1rem 3rem 1rem;
+      box-sizing: border-box;
     }
-
-    .main-container {
-      width: 90%;
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 1rem;
-    }
-
-    #header {
-      position: sticky;
-      top: 0;
-      background-color: rgba(255, 255, 255, 0.15);
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      padding: 1rem;
-      z-index: 10;
-    }
-	
-
-    h2 {
-      margin: 0.5rem 0 1rem 0;
-      font-size: 1.5rem;
-      font-weight: 600;
-    }
-
-    .section-header {
-      margin-top: 2rem;
-      margin-bottom: 0.5rem;
-      font-size: 1.1rem;
-      font-weight: 600;
-    }
-
-    .preference-card {
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 12px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      font-weight: bold;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .preference-card input[type="text"],
-    .preference-card input[type="email"],
-    .preference-card input[type="password"] {
-      width: 100%;
-      padding: 0.6rem;
+    .container { max-width: 520px; width: 100%; text-align: center; }
+    h1 { margin-bottom: 0.5rem; }
+    p  { margin: 0.25rem 0 1.25rem 0; }
+    input, button {
       font-size: 1rem;
+      padding: 0.75rem;
+      margin: 0.5rem auto;
       border: none;
       border-radius: 8px;
-      margin-top: 0.5rem;
-      margin-bottom: 0.75rem;
+      width: 90%;
+      max-width: 360px;
+      display: block;
     }
-
-/* Navigation Buttons (small and aligned) */
-.nav-button {
-  background: white;
-  color: #2f77a7;
-  padding: 0.4rem 0.8rem;
-  font-size: 0.8rem;
-  font-weight: bold;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  margin-right: 0.5rem;
-}
-
-/* Action Buttons (larger and full-width inside cards) */
-.action-button {
-  background: white;
-  color: #2f77a7;
-  font-weight: bold;
-  font-size: 1rem;
-  padding: 0.6rem;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  width: 100%;
-  margin-top: 0.5rem;
-}
-
-    .coming-soon {
-      opacity: 0.5;
-      font-style: italic;
-      font-weight: normal;
-      font-size: 0.95rem;
-      margin-top: 0.25rem;
+    button {
+      background: white;
+      color: #2f77a7;
+      font-weight: bold;
+      cursor: pointer;
     }
-
-    .danger-btn {
-      background-color: darkred;
-      color: white;
+    .note { font-size: 0.9rem; opacity: 0.9; }
+    .banner {
+      display: none;
+      margin: 1rem auto 0;
+      max-width: 520px;
+      padding: 0.9rem 1rem;
+      border-radius: 10px;
+      background: rgba(255,255,255,0.2);
+      color: #073b5d;
+      font-weight: 600;
     }
-
-    body.dark {
-      background: #121212;
-    }
-
-    body.dark .preference-card {
-      background: rgba(255, 255, 255, 0.08);
+    .linklike {
+      background: transparent;
+      border: 1px solid rgba(255,255,255,0.6);
     }
   </style>
 </head>
-<body style="display: none;">
-  <div class="main-container" id="mainContent" style="display: none;">
+<body>
+  <div class="container">
+    <h1>Create your account</h1>
+    <p class="note">Enter your details below. We’ll use your phone later for SMS-based recovery.</p>
 
-<!-- Header -->
-<div id="header">
-<button id="back-button" class="nav-button" aria-label="Go back">
-				<i class="fas fa-arrow-left" style="margin-right: 0.5rem;"></i> Back
-			</button>
-			<button id="home-button" class="nav-button" onclick="goHome()"><i class="fas fa-house" style="margin-right: 0.5rem;"></i> Home</button>
-  <h2>Account Management</h2>
-</div>	
+    <input type="email" id="email" placeholder="Email" autocomplete="email" />
+    <input type="password" id="password" placeholder="Password" autocomplete="new-password" />
+    <input type="password" id="confirm" placeholder="Confirm password" autocomplete="new-password" />
+    <input type="tel" id="phone" placeholder="Recovery phone (e.g., +14085551234)" autocomplete="tel" />
 
-    <!-- Change Email -->
-    <div class="section-header">Change Email</div>
-    <div class="preference-card">
-      <input type="email" id="newEmail" placeholder="New Email" />
-      <button class="action-button" onclick="changeEmail()">Update Email</button>
-    </div>
+    <button id="createBtn">Create my account</button>
+    <button class="linklike" onclick="window.location.href='index.html'">Back to login</button>
 
-    <!-- Change Password -->
-    <div class="section-header">Change Password</div>
-    <div class="preference-card">
-      <input type="password" id="currentPassword" placeholder="Current Password" />
-      <input type="password" id="newPassword" placeholder="New Password" />
-      <input type="password" id="confirmPassword" placeholder="Confirm New Password" />
-      <button class="action-button" onclick="changePassword()">Update Password</button>
-    </div>
-
-    <!-- Two-Factor Auth -->
-    <div class="section-header">Two-Factor Authentication</div>
-    <div class="preference-card">
-      <div class="coming-soon">
-        Feature coming soon. We'll let you secure your account with phone or email verification.
-      </div>
-    </div>
-
-    <!-- Billing -->
-    <div class="section-header">Billing</div>
-    <div class="preference-card">
-      
-<button class="action-button" onclick="openBillingPortal()">Update Payment Method</button>
-    </div>
-
-    <!-- Danger Zone -->
-    <div class="section-header">Danger Zone</div>
-    <div class="preference-card">
-      <button class="action-button danger-btn" onclick="deleteAccount()">Delete My Account</button>
-    </div>
-
+    <div id="successBanner" class="banner">🎉 Congratulations, you’ve created a new account with The Enchanted Checklist!</div>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
-import {
-  getAuth,
-  onAuthStateChanged,
-  updateEmail,
-  updatePassword,
-  deleteUser,
-  EmailAuthProvider,
-  reauthenticateWithCredential
+    import {
+      getAuth,
+      createUserWithEmailAndPassword,
+      updateProfile
     } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
+    import {
+      getFirestore,
+      doc,
+      setDoc
+    } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyDLDycGnK6Nm8m5KqbhhPSKz7GNb3PjZCo",
@@ -191,74 +95,56 @@ import {
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
+    const db = getFirestore(app);
 
-onAuthStateChanged(auth, user => {
-  if (!user) {
-    window.location.href = "login.html";
-  } else {
-    document.body.style.display = "block";
-    document.getElementById("mainContent").style.display = "block";
-  }
-});
+    function validE164(phone) {
+      // very light validation; we’ll rely on proper SMS verification later
+      return !phone || /^\+?[1-9]\d{6,14}$/.test(phone);
+    }
 
-    window.changeEmail = async function () {
-      const user = auth.currentUser;
-      const newEmail = document.getElementById("newEmail").value.trim();
-      if (!newEmail) return alert("Please enter a new email.");
+    document.getElementById("createBtn").addEventListener("click", async () => {
+      const email = document.getElementById("email").value.trim();
+      const password = document.getElementById("password").value;
+      const confirm = document.getElementById("confirm").value;
+      const phone = document.getElementById("phone").value.trim();
+
+      if (!email || !password) return alert("Please enter an email and password.");
+      if (password !== confirm) return alert("Passwords do not match.");
+      if (!validE164(phone)) return alert("Please enter a phone in international format (e.g., +14085551234) or leave it blank.");
+
       try {
-        await updateEmail(user, newEmail);
-        alert("Email updated!");
-      } catch (err) {
-        alert("Failed to update email: " + err.message);
-      }
-    };
+        const cred = await createUserWithEmailAndPassword(auth, email, password);
 
-window.changePassword = async function () {
-  const user = auth.currentUser;
-  const currentPass = document.getElementById("currentPassword").value.trim();
-  const newPass = document.getElementById("newPassword").value.trim();
-  const confirmPass = document.getElementById("confirmPassword").value.trim();
-
-  if (!currentPass || !newPass || !confirmPass) {
-    alert("Please fill out all password fields.");
-    return;
-  }
-
-  if (newPass !== confirmPass) {
-    alert("New passwords do not match.");
-    return;
-  }
-
-  try {
-    const credential = EmailAuthProvider.credential(user.email, currentPass);
-    await reauthenticateWithCredential(user, credential);
-    await updatePassword(user, newPass);
-    alert("Password updated successfully!");
-  } catch (err) {
-    alert("Failed to update password: " + err.message);
-  }
-};
-
-    window.openBillingPortal = function () {
-      // Replace this URL after Stripe backend is deployed
-      window.location.href = "https://buy.stripe.com/bJeaEZaUS0Fe9l9aNAefC00";
-    };
-
-    window.deleteAccount = async function () {
-      if (confirm("Are you sure you want to delete your account? This cannot be undone.")) {
+        // Optional: set displayName to email’s local part
         try {
-          await deleteUser(auth.currentUser);
-          alert("Account deleted.");
-          window.location.href = "login.html";
-        } catch (err) {
-          alert("Error deleting account: " + err.message);
-        }
-      }
-    };
+          const local = email.split("@")[0];
+          await updateProfile(cred.user, { displayName: local });
+        } catch {}
 
-    window.goHome = function () {
-      window.location.href = "home.html";
-    };
+        // Save phone (and anything else) for later use
+        if (phone) {
+          await setDoc(doc(db, `users/${cred.user.uid}/profile`, "contact"), {
+            email,
+            phone,
+            createdAt: new Date().toISOString()
+          }, { merge: true });
+        } else {
+          await setDoc(doc(db, `users/${cred.user.uid}/profile`, "contact"), {
+            email,
+            createdAt: new Date().toISOString()
+          }, { merge: true });
+        }
+
+        // Show success banner, then kick back to login
+        const banner = document.getElementById("successBanner");
+        banner.style.display = "block";
+        setTimeout(() => {
+          window.location.href = "index.html";
+        }, 6000); // 6 seconds
+      } catch (err) {
+        alert("Registration failed: " + err.message);
+      }
+    });
   </script>
 </body>
 </html>
